@@ -1,3 +1,6 @@
+[B][COLOR red]Update - v3.4.3 - Jan. 02, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed loop issue with re-occurring library yes/no dialog.[/I]
+
 [B][COLOR red]Update - v3.4.2 - Dec. 31, 2019[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Added "Add Show to Watchlist" and "Remove Show
     from Watchlist" options to Trakt Manager when
